reconnect to reflection essay

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 
                 <div class='ad-banner'>
-                    <h4><a id="reflection-essay" href="#">my reflection essay<div class="go-to"></div></a></h4>
+                    <h4><a id="reflection-essay" href="https://thaothanhtrantxwes.github.io/composition-i-reflection-essay/">my reflection essay<div class="go-to"></div></a></h4>
                     
                     <p></p>
                 </div>
